@@ -14,6 +14,7 @@ module Different_Test
   component Sender
   {
     port Different_Test::QueryConditionTestConnector::DDS_Write info_write;
+    provides CCM_DDS::ConnectorStatusListener connector_status;
 
     attribute unsigned short keys;
   };
